kubectl_deploy/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cccd-app-service
  namespace: cccd-dev
  labels:
    app: cccd-app-service
spec:
  ports:
    - port: 4567
      name: http
      targetPort: 4567
  selector:
    app: cccd
